fix(input): change placeholder and size logic, fix placeholder is not shown when it's multiple; add min-width for tag-container in case it's too narrow

--- a/packages/theme/src/scss/components/input/basic.scss
+++ b/packages/theme/src/scss/components/input/basic.scss
@@ -217,6 +217,7 @@
     z-index: 1;
     display: inline-flex;
     align-items: center;
+    min-width: var(#{getVarName(('input', 'tag-container', 'min-width'))}, 140px);
   }
 
   $empty: getIs(not-empty, $B);
